Actualizando Controlador